# OrbSim

./: .gitignore  CMakeLists.txt  README.md  iss.txt  pyproject.toml
.github/workflows/: ci.yml
src/_core/: CMakeLists.txt  bindings.cpp  coords.cpp  coords.hpp  sgp4.cpp  sgp4.hpp
src/orbsim/: __init__.py
src/orbsim/analysis/: conjunction.py  ground_track.py  passes.py
src/orbsim/cli/: main.py
src/orbsim/core/: __init__.py  propagator.py  satellite.py  tle.py
src/orbsim/viz/: renderer_3d.py
tests/fixtures/: sample.tle
tests/unit/: test_coords.py  test_sgp4.py
